manifests/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 3
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: darylwalsh/gorapi:0.1.0
          ports:
            - containerPort: 8080
              name: api
            - containerPort: 8100
              name: docs
