manifests/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.gitopsreact.com
      http:
        paths:
          - backend:
              serviceName: backend
              servicePort: 8080
    - host: docs.gitopsreact.com
      http:
        paths:
          - backend:
              serviceName: backend
              servicePort: 8100
